# DBMS

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md
src/: main.rs  prime.txt
src/bin_types/: bin_key.rs  bin_value.rs  mod.rs
src/connection/: connection.rs  mod.rs  reader.rs  status.rs  sync.rs  writer.rs
src/console/: input.rs  macros.rs  mod.rs  start_message.rs  write_errors.rs
src/constants/: actions.rs  mod.rs  paths.rs  size.rs
src/dev/: bench.rs  mod.rs  pseudo_main.rs  pseudo_server.rs
src/disk_storage/: storage.rs
src/error/: custom_error.rs  mod.rs
src/index/: hash.rs  index.rs  mod.rs  serial.rs  tree.rs
src/node/: node.rs
src/scheme/: field_info.rs  mod.rs  scheme.rs
src/server/: cfg.rs  classes  mod.rs  pipe  server.rs  stream_trait.rs
src/server/reactions/: mod.rs  space.rs  status.rs  table.rs  work_with_spaces.rs  work_with_tables.rs
src/settings/: get_ideal_numbers.rs  mod.rs
src/shard/: manager.rs  mod.rs  shard.rs  shard_ref.rs
src/shard/reactions/: status.rs  table.rs  work_with_tables.rs
src/space/: cache_space.rs  in_memory_space.rs  mod.rs  on_disk.rs  scheme.rs  space.rs
src/storage/: mod.rs  storage.rs
src/stream/: mod.rs  stream_trait.rs
src/table/: cache.rs  in_memory.rs  mod.rs  on_disk.rs  table.rs
src/tests/: crud.rs  crud_bench.rs  mod.rs  persistence.rs
src/utils/: mod.rs  read_more.rs
src/utils/bytes/: uint.rs
src/utils/cells/: mod.rs  unsafe_cell.rs
src/utils/fastbytes/: int.rs  mod.rs
src/writers/: log_write.rs  log_writer.rs  mod.rs  pipe_writer.rs  sized_writer.rs  utils.rs
(+2 files in other folders)
