[package]
name = "dbms"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.7"
positioned-io = "0.3.3"
num_cpus = "1.16.0"
dashmap = "5.5.3"
tokio = {version = "1.35.1", features = ["full"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }

[profile.release]
lto = true