[package]
name = "dbms"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.7"
positioned-io = "0.3.3"
num_cpus = "1.16.0"
dashmap = "5.5.3"
tokio = {version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
crossbeam-channel = "0.5.11"
core_affinity = "0.8.1"
async-trait = { version = "0.1.77", features = [] }

[profile.release]
lto = true